; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ixgbe/extr_ixgbe_phy.c_ixgbe_reset_phy_nl.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ixgbe/extr_ixgbe_phy.c_ixgbe_reset_phy_nl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ixgbe_hw = type { %struct.TYPE_8__, %struct.TYPE_6__ }
%struct.TYPE_8__ = type { %struct.TYPE_7__ }
%struct.TYPE_7__ = type { i32 (%struct.ixgbe_hw.0*, i32, i32, i32)*, i32 (%struct.ixgbe_hw.1*, i32, i32, i32*)* }
%struct.ixgbe_hw.0 = type opaque
%struct.ixgbe_hw.1 = type opaque
%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i64 (%struct.ixgbe_hw.2*, i32, i32*)* }
%struct.ixgbe_hw.2 = type opaque

@FALSE = common dso_local global i32 0, align 4
@IXGBE_SUCCESS = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [19 x i8] c"ixgbe_reset_phy_nl\00", align 1
@IXGBE_MDIO_PHY_XS_CONTROL = common dso_local global i32 0, align 4
@IXGBE_MDIO_PHY_XS_DEV_TYPE = common dso_local global i32 0, align 4
@IXGBE_MDIO_PHY_XS_RESET = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [29 x i8] c"PHY reset did not complete.\0A\00", align 1
@IXGBE_ERR_PHY = common dso_local global i64 0, align 8
@IXGBE_CONTROL_MASK_NL = common dso_local global i32 0, align 4
@IXGBE_CONTROL_SHIFT_NL = common dso_local global i32 0, align 4
@IXGBE_DATA_MASK_NL = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [14 x i8] c"DELAY: %d MS\0A\00", align 1
@.str.3 = private unnamed_addr constant [7 x i8] c"DATA:\0A\00", align 1
@IXGBE_TWINAX_DEV = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [22 x i8] c"Wrote %4.4x to %4.4x\0A\00", align 1
@.str.5 = private unnamed_addr constant [10 x i8] c"CONTROL:\0A\00", align 1
@IXGBE_CONTROL_EOL_NL = common dso_local global i32 0, align 4
@.str.6 = private unnamed_addr constant [5 x i8] c"EOL\0A\00", align 1
@TRUE = common dso_local global i32 0, align 4
@IXGBE_CONTROL_SOL_NL = common dso_local global i32 0, align 4
@.str.7 = private unnamed_addr constant [5 x i8] c"SOL\0A\00", align 1
@.str.8 = private unnamed_addr constant [19 x i8] c"Bad control value\0A\00", align 1
@.str.9 = private unnamed_addr constant [18 x i8] c"Bad control type\0A\00", align 1
@IXGBE_ERROR_INVALID_STATE = common dso_local global i32 0, align 4
@.str.10 = private unnamed_addr constant [32 x i8] c"eeprom read at offset %d failed\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @ixgbe_reset_phy_nl(%struct.ixgbe_hw* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.ixgbe_hw*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i64, align 8
  %14 = alloca i32, align 4
  store %struct.ixgbe_hw* %0, %struct.ixgbe_hw** %3, align 8
  %15 = load i32, i32* @FALSE, align 4
  store i32 %15, i32* %9, align 4
  store i32 0, i32* %12, align 4
  %16 = load i64, i64* @IXGBE_SUCCESS, align 8
  store i64 %16, i64* %13, align 8
  %17 = call i32 @DEBUGFUNC(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0))
  %18 = load %struct.ixgbe_hw*, %struct.ixgbe_hw** %3, align 8
  %19 = call i64 @ixgbe_check_reset_blocked(%struct.ixgbe_hw* %18)
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %22

21:                                               ; preds = %1
  br label %216

22:                                               ; preds = %1
  %23 = load %struct.ixgbe_hw*, %struct.ixgbe_hw** %3, align 8
  %24 = getelementptr inbounds %struct.ixgbe_hw, %struct.ixgbe_hw* %23, i32 0, i32 0
  %25 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %24, i32 0, i32 0
  %26 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %25, i32 0, i32 1
  %27 = load i32 (%struct.ixgbe_hw.1*, i32, i32, i32*)*, i32 (%struct.ixgbe_hw.1*, i32, i32, i32*)** %26, align 8
  %28 = load %struct.ixgbe_hw*, %struct.ixgbe_hw** %3, align 8
  %29 = bitcast %struct.ixgbe_hw* %28 to %struct.ixgbe_hw.1*
  %30 = load i32, i32* @IXGBE_MDIO_PHY_XS_CONTROL, align 4
  %31 = load i32, i32* @IXGBE_MDIO_PHY_XS_DEV_TYPE, align 4
  %32 = call i32 %27(%struct.ixgbe_hw.1* %29, i32 %30, i32 %31, i32* %12)
  %33 = load %struct.ixgbe_hw*, %struct.ixgbe_hw** %3, align 8
  %34 = getelementptr inbounds %struct.ixgbe_hw, %struct.ixgbe_hw* %33, i32 0, i32 0
  %35 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %34, i32 0, i32 0
  %36 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %35, i32 0, i32 0
  %37 = load i32 (%struct.ixgbe_hw.0*, i32, i32, i32)*, i32 (%struct.ixgbe_hw.0*, i32, i32, i32)** %36, align 8
  %38 = load %struct.ixgbe_hw*, %struct.ixgbe_hw** %3, align 8
  %39 = bitcast %struct.ixgbe_hw* %38 to %struct.ixgbe_hw.0*
  %40 = load i32, i32* @IXGBE_MDIO_PHY_XS_CONTROL, align 4
  %41 = load i32, i32* @IXGBE_MDIO_PHY_XS_DEV_TYPE, align 4
  %42 = load i32, i32* %12, align 4
  %43 = load i32, i32* @IXGBE_MDIO_PHY_XS_RESET, align 4
  %44 = or i32 %42, %43
  %45 = call i32 %37(%struct.ixgbe_hw.0* %39, i32 %40, i32 %41, i32 %44)
  store i32 0, i32* %14, align 4
  br label %46

46:                                               ; preds = %67, %22
  %47 = load i32, i32* %14, align 4
  %48 = icmp slt i32 %47, 100
  br i1 %48, label %49, label %70

49:                                               ; preds = %46
  %50 = load %struct.ixgbe_hw*, %struct.ixgbe_hw** %3, align 8
  %51 = getelementptr inbounds %struct.ixgbe_hw, %struct.ixgbe_hw* %50, i32 0, i32 0
  %52 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %51, i32 0, i32 0
  %53 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %52, i32 0, i32 1
  %54 = load i32 (%struct.ixgbe_hw.1*, i32, i32, i32*)*, i32 (%struct.ixgbe_hw.1*, i32, i32, i32*)** %53, align 8
  %55 = load %struct.ixgbe_hw*, %struct.ixgbe_hw** %3, align 8
  %56 = bitcast %struct.ixgbe_hw* %55 to %struct.ixgbe_hw.1*
  %57 = load i32, i32* @IXGBE_MDIO_PHY_XS_CONTROL, align 4
  %58 = load i32, i32* @IXGBE_MDIO_PHY_XS_DEV_TYPE, align 4
  %59 = call i32 %54(%struct.ixgbe_hw.1* %56, i32 %57, i32 %58, i32* %12)
  %60 = load i32, i32* %12, align 4
  %61 = load i32, i32* @IXGBE_MDIO_PHY_XS_RESET, align 4
  %62 = and i32 %60, %61
  %63 = icmp eq i32 %62, 0
  br i1 %63, label %64, label %65

64:                                               ; preds = %49
  br label %70

65:                                               ; preds = %49
  %66 = call i32 @msec_delay(i32 10)
  br label %67

67:                                               ; preds = %65
  %68 = load i32, i32* %14, align 4
  %69 = add nsw i32 %68, 1
  store i32 %69, i32* %14, align 4
  br label %46

70:                                               ; preds = %64, %46
  %71 = load i32, i32* %12, align 4
  %72 = load i32, i32* @IXGBE_MDIO_PHY_XS_RESET, align 4
  %73 = and i32 %71, %72
  %74 = icmp ne i32 %73, 0
  br i1 %74, label %75, label %78

75:                                               ; preds = %70
  %76 = call i32 @DEBUGOUT(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.1, i64 0, i64 0))
  %77 = load i64, i64* @IXGBE_ERR_PHY, align 8
  store i64 %77, i64* %13, align 8
  br label %216

78:                                               ; preds = %70
  %79 = load %struct.ixgbe_hw*, %struct.ixgbe_hw** %3, align 8
  %80 = call i64 @ixgbe_get_sfp_init_sequence_offsets(%struct.ixgbe_hw* %79, i32* %10, i32* %11)
  store i64 %80, i64* %13, align 8
  %81 = load i64, i64* %13, align 8
  %82 = load i64, i64* @IXGBE_SUCCESS, align 8
  %83 = icmp ne i64 %81, %82
  br i1 %83, label %84, label %85

84:                                               ; preds = %78
  br label %216

85:                                               ; preds = %78
  %86 = load %struct.ixgbe_hw*, %struct.ixgbe_hw** %3, align 8
  %87 = getelementptr inbounds %struct.ixgbe_hw, %struct.ixgbe_hw* %86, i32 0, i32 1
  %88 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %87, i32 0, i32 0
  %89 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %88, i32 0, i32 0
  %90 = load i64 (%struct.ixgbe_hw.2*, i32, i32*)*, i64 (%struct.ixgbe_hw.2*, i32, i32*)** %89, align 8
  %91 = load %struct.ixgbe_hw*, %struct.ixgbe_hw** %3, align 8
  %92 = bitcast %struct.ixgbe_hw* %91 to %struct.ixgbe_hw.2*
  %93 = load i32, i32* %11, align 4
  %94 = call i64 %90(%struct.ixgbe_hw.2* %92, i32 %93, i32* %8)
  store i64 %94, i64* %13, align 8
  %95 = load i32, i32* %11, align 4
  %96 = add nsw i32 %95, 1
  store i32 %96, i32* %11, align 4
  br label %97

97:                                               ; preds = %214, %85
  %98 = load i32, i32* %9, align 4
  %99 = icmp ne i32 %98, 0
  %100 = xor i1 %99, true
  br i1 %100, label %101, label %215

101:                                              ; preds = %97
  %102 = load %struct.ixgbe_hw*, %struct.ixgbe_hw** %3, align 8
  %103 = getelementptr inbounds %struct.ixgbe_hw, %struct.ixgbe_hw* %102, i32 0, i32 1
  %104 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %103, i32 0, i32 0
  %105 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %104, i32 0, i32 0
  %106 = load i64 (%struct.ixgbe_hw.2*, i32, i32*)*, i64 (%struct.ixgbe_hw.2*, i32, i32*)** %105, align 8
  %107 = load %struct.ixgbe_hw*, %struct.ixgbe_hw** %3, align 8
  %108 = bitcast %struct.ixgbe_hw* %107 to %struct.ixgbe_hw.2*
  %109 = load i32, i32* %11, align 4
  %110 = call i64 %106(%struct.ixgbe_hw.2* %108, i32 %109, i32* %6)
  store i64 %110, i64* %13, align 8
  %111 = load i64, i64* %13, align 8
  %112 = icmp ne i64 %111, 0
  br i1 %112, label %113, label %114

113:                                              ; preds = %101
  br label %218

114:                                              ; preds = %101
  %115 = load i32, i32* %6, align 4
  %116 = load i32, i32* @IXGBE_CONTROL_MASK_NL, align 4
  %117 = and i32 %115, %116
  %118 = load i32, i32* @IXGBE_CONTROL_SHIFT_NL, align 4
  %119 = ashr i32 %117, %118
  store i32 %119, i32* %5, align 4
  %120 = load i32, i32* %6, align 4
  %121 = load i32, i32* @IXGBE_DATA_MASK_NL, align 4
  %122 = and i32 %120, %121
  store i32 %122, i32* %7, align 4
  %123 = load i32, i32* %5, align 4
  switch i32 %123, label %211 [
    i32 128, label %124
    i32 129, label %131
    i32 130, label %190
  ]

124:                                              ; preds = %114
  %125 = load i32, i32* %11, align 4
  %126 = add nsw i32 %125, 1
  store i32 %126, i32* %11, align 4
  %127 = load i32, i32* %7, align 4
  %128 = call i32 @DEBUGOUT1(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.2, i64 0, i64 0), i32 %127)
  %129 = load i32, i32* %7, align 4
  %130 = call i32 @msec_delay(i32 %129)
  br label %214

131:                                              ; preds = %114
  %132 = call i32 @DEBUGOUT(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.3, i64 0, i64 0))
  %133 = load i32, i32* %11, align 4
  %134 = add nsw i32 %133, 1
  store i32 %134, i32* %11, align 4
  %135 = load %struct.ixgbe_hw*, %struct.ixgbe_hw** %3, align 8
  %136 = getelementptr inbounds %struct.ixgbe_hw, %struct.ixgbe_hw* %135, i32 0, i32 1
  %137 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %136, i32 0, i32 0
  %138 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %137, i32 0, i32 0
  %139 = load i64 (%struct.ixgbe_hw.2*, i32, i32*)*, i64 (%struct.ixgbe_hw.2*, i32, i32*)** %138, align 8
  %140 = load %struct.ixgbe_hw*, %struct.ixgbe_hw** %3, align 8
  %141 = bitcast %struct.ixgbe_hw* %140 to %struct.ixgbe_hw.2*
  %142 = load i32, i32* %11, align 4
  %143 = call i64 %139(%struct.ixgbe_hw.2* %141, i32 %142, i32* %4)
  store i64 %143, i64* %13, align 8
  %144 = load i64, i64* %13, align 8
  %145 = icmp ne i64 %144, 0
  br i1 %145, label %146, label %147

146:                                              ; preds = %131
  br label %218

147:                                              ; preds = %131
  %148 = load i32, i32* %11, align 4
  %149 = add nsw i32 %148, 1
  store i32 %149, i32* %11, align 4
  store i32 0, i32* %14, align 4
  br label %150

150:                                              ; preds = %186, %147
  %151 = load i32, i32* %14, align 4
  %152 = load i32, i32* %7, align 4
  %153 = icmp slt i32 %151, %152
  br i1 %153, label %154, label %189

154:                                              ; preds = %150
  %155 = load %struct.ixgbe_hw*, %struct.ixgbe_hw** %3, align 8
  %156 = getelementptr inbounds %struct.ixgbe_hw, %struct.ixgbe_hw* %155, i32 0, i32 1
  %157 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %156, i32 0, i32 0
  %158 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %157, i32 0, i32 0
  %159 = load i64 (%struct.ixgbe_hw.2*, i32, i32*)*, i64 (%struct.ixgbe_hw.2*, i32, i32*)** %158, align 8
  %160 = load %struct.ixgbe_hw*, %struct.ixgbe_hw** %3, align 8
  %161 = bitcast %struct.ixgbe_hw* %160 to %struct.ixgbe_hw.2*
  %162 = load i32, i32* %11, align 4
  %163 = call i64 %159(%struct.ixgbe_hw.2* %161, i32 %162, i32* %6)
  store i64 %163, i64* %13, align 8
  %164 = load i64, i64* %13, align 8
  %165 = icmp ne i64 %164, 0
  br i1 %165, label %166, label %167

166:                                              ; preds = %154
  br label %218

167:                                              ; preds = %154
  %168 = load %struct.ixgbe_hw*, %struct.ixgbe_hw** %3, align 8
  %169 = getelementptr inbounds %struct.ixgbe_hw, %struct.ixgbe_hw* %168, i32 0, i32 0
  %170 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %169, i32 0, i32 0
  %171 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %170, i32 0, i32 0
  %172 = load i32 (%struct.ixgbe_hw.0*, i32, i32, i32)*, i32 (%struct.ixgbe_hw.0*, i32, i32, i32)** %171, align 8
  %173 = load %struct.ixgbe_hw*, %struct.ixgbe_hw** %3, align 8
  %174 = bitcast %struct.ixgbe_hw* %173 to %struct.ixgbe_hw.0*
  %175 = load i32, i32* %4, align 4
  %176 = load i32, i32* @IXGBE_TWINAX_DEV, align 4
  %177 = load i32, i32* %6, align 4
  %178 = call i32 %172(%struct.ixgbe_hw.0* %174, i32 %175, i32 %176, i32 %177)
  %179 = load i32, i32* %6, align 4
  %180 = load i32, i32* %4, align 4
  %181 = call i32 @DEBUGOUT2(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.4, i64 0, i64 0), i32 %179, i32 %180)
  %182 = load i32, i32* %11, align 4
  %183 = add nsw i32 %182, 1
  store i32 %183, i32* %11, align 4
  %184 = load i32, i32* %4, align 4
  %185 = add nsw i32 %184, 1
  store i32 %185, i32* %4, align 4
  br label %186

186:                                              ; preds = %167
  %187 = load i32, i32* %14, align 4
  %188 = add nsw i32 %187, 1
  store i32 %188, i32* %14, align 4
  br label %150

189:                                              ; preds = %150
  br label %214

190:                                              ; preds = %114
  %191 = load i32, i32* %11, align 4
  %192 = add nsw i32 %191, 1
  store i32 %192, i32* %11, align 4
  %193 = call i32 @DEBUGOUT(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.5, i64 0, i64 0))
  %194 = load i32, i32* %7, align 4
  %195 = load i32, i32* @IXGBE_CONTROL_EOL_NL, align 4
  %196 = icmp eq i32 %194, %195
  br i1 %196, label %197, label %200

197:                                              ; preds = %190
  %198 = call i32 @DEBUGOUT(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.6, i64 0, i64 0))
  %199 = load i32, i32* @TRUE, align 4
  store i32 %199, i32* %9, align 4
  br label %210

200:                                              ; preds = %190
  %201 = load i32, i32* %7, align 4
  %202 = load i32, i32* @IXGBE_CONTROL_SOL_NL, align 4
  %203 = icmp eq i32 %201, %202
  br i1 %203, label %204, label %206

204:                                              ; preds = %200
  %205 = call i32 @DEBUGOUT(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.7, i64 0, i64 0))
  br label %209

206:                                              ; preds = %200
  %207 = call i32 @DEBUGOUT(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.8, i64 0, i64 0))
  %208 = load i64, i64* @IXGBE_ERR_PHY, align 8
  store i64 %208, i64* %13, align 8
  br label %216

209:                                              ; preds = %204
  br label %210

210:                                              ; preds = %209, %197
  br label %214

211:                                              ; preds = %114
  %212 = call i32 @DEBUGOUT(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.9, i64 0, i64 0))
  %213 = load i64, i64* @IXGBE_ERR_PHY, align 8
  store i64 %213, i64* %13, align 8
  br label %216

214:                                              ; preds = %210, %189, %124
  br label %97

215:                                              ; preds = %97
  br label %216

216:                                              ; preds = %215, %211, %206, %84, %75, %21
  %217 = load i64, i64* %13, align 8
  store i64 %217, i64* %2, align 8
  br label %223

218:                                              ; preds = %166, %146, %113
  %219 = load i32, i32* @IXGBE_ERROR_INVALID_STATE, align 4
  %220 = load i32, i32* %11, align 4
  %221 = call i32 @ERROR_REPORT2(i32 %219, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.10, i64 0, i64 0), i32 %220)
  %222 = load i64, i64* @IXGBE_ERR_PHY, align 8
  store i64 %222, i64* %2, align 8
  br label %223

223:                                              ; preds = %218, %216
  %224 = load i64, i64* %2, align 8
  ret i64 %224
}

declare dso_local i32 @DEBUGFUNC(i8*) #1

declare dso_local i64 @ixgbe_check_reset_blocked(%struct.ixgbe_hw*) #1

declare dso_local i32 @msec_delay(i32) #1

declare dso_local i32 @DEBUGOUT(i8*) #1

declare dso_local i64 @ixgbe_get_sfp_init_sequence_offsets(%struct.ixgbe_hw*, i32*, i32*) #1

declare dso_local i32 @DEBUGOUT1(i8*, i32) #1

declare dso_local i32 @DEBUGOUT2(i8*, i32, i32) #1

declare dso_local i32 @ERROR_REPORT2(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
